<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    >
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      >
    <ImageView
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:src="@drawable/lab"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="4dp"
        android:text="@string/harry_s_lab"
        android:textAppearance="?attr/textAppearanceHeadline4"
        />
  </LinearLayout>


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:autoLink="web"
      android:text="@string/info"
      android:textAppearance="?attr/textAppearanceBody2"
      />

  <TextView
      android:id="@+id/btnClose"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_margin="@dimen/activity_vertical_margin"
      android:text="@string/close"
      android:textColor="@color/colorPrimary"
      android:textSize="18sp"
      android:textStyle="bold"
      />
</LinearLayout>