<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/materialCardView"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_margin="20dp"
      android:layout_marginBottom="8dp"
      app:cardElevation="8dp"
      app:contentPadding="@dimen/activity_horizontal_margin"
      app:layout_constraintBottom_toTopOf="@+id/chipGroup"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:strokeColor="?attr/colorPrimaryDark"
      app:strokeWidth="0.6dp"
      >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_above="@id/message"
          android:layout_marginBottom="16dp"
          android:layout_marginTop="8dp"
          android:src="@drawable/lab"
          app:layout_constraintBottom_toTopOf="@+id/message"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <TextView
          android:id="@+id/message"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/this_is_a_theme_overlay_demo"
          android:textAppearance="?textAppearanceBody1"
          android:textSize="20sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
          android:id="@+id/btnLike"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/i_love_material_theme"
          android:textAppearance="?textAppearanceBody2"
          android:textColor="@color/colorWhite"
          app:backgroundTint="@color/colorPrimary"
          app:icon="@drawable/ic_love"
          app:iconTint="@color/colorWhite"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/message"
          />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.chip.ChipGroup
      android:id="@+id/chipGroup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_vertical_margin"
      app:chipSpacing="4dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:singleLine="true"
      >

    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="12sp"
        app:chipBackgroundColor="@color/colorWhite"
        app:chipIcon="@drawable/ic_info"
        app:chipIconTint="?attr/colorPrimaryDark"
        app:chipStrokeColor="?attr/colorAccent"
        app:chipStrokeWidth="0.8dp"
        />
    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="12sp"
        app:chipBackgroundColor="@color/colorWhite"
        app:chipIcon="@drawable/ic_info"
        app:chipIconTint="?attr/colorPrimaryDark"
        app:chipStrokeColor="?attr/colorAccent"
        app:chipStrokeWidth="0.8dp"
        />
    <com.google.android.material.chip.Chip
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harry_s_lab"
        android:textSize="12sp"
        app:chipBackgroundColor="@color/colorWhite"
        app:chipIcon="@drawable/ic_info"
        app:chipIconTint="?attr/colorPrimaryDark"
        app:chipStrokeColor="?attr/colorAccent"
        app:chipStrokeWidth="0.8dp"
        />
  </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>